--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                      target="_black">Ejemplos</a>
                 </div>
             </div>
-             <section id="promociones"> 
+             <section class="promociones"> 
     <h2>Promociones</h2>
     <p>Contamos con una gran variedad de estilos y precios, adapatados a tu mejor comodidad.</p>
     <img src="Cabello1.jpg" alt="Ejemplo de trabajo 1">
