--- a/index.html
+++ b/index.html
@@ -48,10 +48,12 @@
             </div>
              <section class="promociones"> 
     <h2>Promociones</h2>
+                 <div class="promociones-imagenes">
     <p>Contamos con una gran variedad de estilos y precios, adapatados a tu mejor comodidad.</p>
     <img src="Cabello1.jpg" alt="Ejemplo de trabajo 1">
                 <img src="Cabello2.jpg" alt="Ejemplo de trabajo 2">
-</section>.
+                 </div>
+             </section>.
 
 
 </section> 
