--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <img src="Logotipo.jpg" alt="Black Matiz Studio" class="logo">
+        <img src="Prueb.jpg" alt="Black Matiz Studio" class="logo">
     </header>
     <main>
         <h1>Bienvenidos a BLACK MATIZ Studio</h1>
