--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header id="main-header">
-        <img src="Prueba.png" alt="Black Matiz Studio" class="logo">
+        <img src="Pruebaa.jpg" alt="Black Matiz Studio" class="logo">
         <nav class="navbar">
             <div class="menu-toggle" id="mobile-menu">
                 <span class="bar"></span>
@@ -27,9 +27,13 @@
         </nav>
     </header>
 
+    <!-- Sección de Bienvenida con Logo y Texto -->
+    <div class="bienvenida">
+        <img src="Logotipo.jpg" alt="Logotipo de BLACK MATIZ Studio" class="logo-bienvenida">
+        <h1>Bienvenidos a BLACK MATIZ Studio</h1>
+    </div>
+
     <main>
-        <h1 class="fade-in">Bienvenidos a BLACK MATIZ Studio</h1>
-        
         <section id="sobre-nosotros" class="reveal">
             <h2>Sobre Nosotros</h2>
             <p>Especialistas en color, tratamientos capilares, pestañas y micropigmentación.</p>
@@ -58,7 +62,6 @@
                 </div>
             </div>
         </section>
-
         <section id="promociones" class="reveal">
             <h2>Promociones</h2>
             <p>Contamos con una gran variedad de estilos y precios, adaptados a tu comodidad.</p>
@@ -77,10 +80,9 @@
             </div>
         </section>
 
+
         <footer id="contacto">
-            <p>Contáctanos: 55 8442 6144 
-               |backmatizstudio@gmail.com 
-               |Direccion: </p>
+            <p>Contáctanos: 55 8442 6144 | blackmatizstudio@gmail.com</p>
             <div class="social-links">
                 <a href="https://www.facebook.com" target="_blank" class="social-icon">
                     <img src="azul.png" alt="Facebook">
