--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <span class="bar"></span>
                 <span class="bar"></span>
             </div>
-            <ul class="nav-list">
+            <ul class="nav-list" id="nav-list">
                 <li><a href="#sobre-nosotros">Sobre Nosotros</a></li>
                 <li><a href="#servicios">Servicios</a></li>
                 <li><a href="#promociones">Promociones</a></li>
