--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
             <h2>Servicios</h2>
             <div class="services">
                 <div class="service-card">
-                    <i class="fa-solid fa-cut"></i>
-                    <h3>Corte de Cabello</h3>
+                    <i class="fa-solid fa-tint"></i>
+                    <h3>Tintes</h3>
                     <p>Estilos modernos y clásicos adaptados a ti.</p>
                     <a href="corte-cabello.html" target="_blank">Ejemplos</a>
                 </div>
