--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <footer id="contacto">
             <p>Contáctanos: 55 8442 6144 | blackmatizstudio@gmail.com</p>
             <div class="social-links">
-                <a href="https://www.facebook.com" target="_blank" class="social-icon">
+                <a href="https://www.facebook.com/share/1N5aTGVupu/" target="_blank" class="social-icon">
                     <img src="azul.png" alt="Facebook">
                 </a>
                 <a href="https://wa.me/5584426144" target="_blank" class="social-icon">
