--- a/corte-cabello.html
+++ b/corte-cabello.html
@@ -171,8 +171,8 @@
 <footer>
     <p>&copy; 2024 BLACK MATIZ Studio. Todos los derechos reservados.</p>
     <div class="social-icons">
-        <a href="https://facebook.com/blackmatizstudio" target="_blank">Facebook</a>
-        <a href="https://wa.me/1234567890" target="_blank">WhatsApp</a>
+        <a href="https://www.facebook.com/share/1N5aTGVupu/" target="_blank">Facebook</a>
+        <a href="https://wa.me/5584426144" target="_blank">WhatsApp</a>
     </div>
 </footer>
 
